* Bug #33244: Fixed UDM wizard preventing opening of existing UDM objects when the creation of an object was cancelled before.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46158 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.97-2) unstable; urgency=low
+
+  * Bug #33244: Fixed UDM wizard preventing opening of existing UDM objects
+    when the creation of an object was cancelled before.
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 20 Nov 2013 14:34:40 +0100
+
 univention-management-console-module-udm (4.0.97-1) unstable; urgency=low
 
   * Bug #33150: fixed typo
