--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.39-2) unstable; urgency=low
+
+  * deactivate wins in an ipv6(only) setup (Bug #33250)
+
+ -- Felix Botner <botner@univention.de>  Wed, 20 Nov 2013 15:20:42 +0100
+
 univention-samba4 (3.0.39-1) unstable; urgency=low
 
   * Fix samba4-idmap traceback in cases where the sid attribute is missing
