* Bug #33083: fixed path typo in preinst script
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46170 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/univention-demo-configuration/debian/changelog
+++ b/test/univention-demo-configuration/debian/changelog
@@ -1,3 +1,9 @@
+univention-demo-configuration (2.0.2-4) unstable; urgency=low
+
+  * Bug #33083: fixed path typo in preinst script
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 20 Nov 2013 17:20:16 +0100
+
 univention-demo-configuration (2.0.2-3) unstable; urgency=low
 
   * Bug #33083: fixed problems in maintainer scripts, do not allow renaming of
