--- a/test/univention-demo-configuration/debian/changelog
+++ b/test/univention-demo-configuration/debian/changelog
@@ -1,3 +1,9 @@
+univention-demo-configuration (2.0.2-5) unstable; urgency=low
+
+  * Bug #33083: added updater related variables
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 20 Nov 2013 17:47:22 +0100
+
 univention-demo-configuration (2.0.2-4) unstable; urgency=low
 
   * Bug #33083: fixed path typo in preinst script
