Update to Firefox 21.1.1esr (Bug #33451)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46180 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/firefox-de/debian/changelog
+++ b/desktop/firefox-de/debian/changelog
@@ -1,3 +1,9 @@
+firefox-de (1:24.1.1esr-6) unstable; urgency=low
+
+  * Update to Firefox 21.1.1esr (Bug #33451)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Wed, 20 Nov 2013 18:20:30 +0100
+
 firefox-de (1:17.0.9esr-4) unstable; urgency=low
 
   * Update to Firefox 17.0.9esr (Bug #32624)
