--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.97-3) unstable; urgency=low
+
+  * Bug #33343: Fixed deleting a selected object from the LDAP tree.
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 21 Nov 2013 11:04:11 +0100
+
 univention-management-console-module-udm (4.0.97-2) unstable; urgency=low
 
   * Bug #33244: Fixed UDM wizard preventing opening of existing UDM objects
