* Bug #33083: do not allow renaming of Administrator
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46190 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/univention-demo-configuration/debian/changelog
+++ b/test/univention-demo-configuration/debian/changelog
@@ -1,3 +1,9 @@
+univention-demo-configuration (2.0.2-6) unstable; urgency=low
+
+  * Bug #33083: do not allow renaming of Administrator
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 21 Nov 2013 11:17:28 +0100
+
 univention-demo-configuration (2.0.2-5) unstable; urgency=low
 
   * Bug #33083: added updater related variables
