* Bug #33484: Give possibility to query for component_id * Bug #33362: Do not send notification if app does not say so
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46201 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (3.0.50-2) unstable; urgency=low
+
+  * Bug #33484: Give possibility to query for component_id
+  * Bug #33362: Do not send notification if app does not say so
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 21 Nov 2013 13:14:07 +0100
+
 univention-management-console-module-appcenter (3.0.50-1) unstable; urgency=low
 
   * Switch to official appcenter for release (Bug #32217) 
