* Bug #33484: Give possibility to query for component_id
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.1/ucs-3.1-1@46223 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (2.0.139-22) unstable; urgency=low
+
+  * Bug #33484: Give possibility to query for component_id
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 21 Nov 2013 17:51:55 +0100
+
 univention-management-console-module-appcenter (2.0.139-21) unstable; urgency=low
 
   * Fixed string formatting (Bug #32193)
