--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,12 @@
+univention-updater (8.0.78-8) unstable; urgency=low
+
+  * Bug #33484: If a component is blocking a release update and this component
+    is from the App Center, link to the app instead of showing a cryptic error
+    message
+  * Bug #33443: Fixed error handling in case UMC server is restarted
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 21 Nov 2013 17:52:56 +0100
+
 univention-updater (8.0.78-7) unstable; urgency=low
 
   * Fix svn42278: (Bug #31426)
