* Bug #29588: added redirect rule for requests to outdated JS/graphics files
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46243 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-2) unstable; urgency=low
+
+  * Bug #29588: added redirect rule for requests to outdated JS/graphics files
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 22 Nov 2013 12:46:16 +0100
+
 univention-management-console-frontend (3.0.152-1) unstable; urgency=low
 
   * Bug #33333: check join status before pointing out the login as root
