--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.152-3) unstable; urgency=low
+
+  * Bug #33130: fix max-width of dialog.confirm() (e.g. activation dialog in
+  	IE 10)
+
+ -- Florian Best <best@univention.de>  Fri, 22 Nov 2013 15:17:53 +0100
+
 univention-management-console-frontend (3.0.152-2) unstable; urgency=low
 
   * Bug #29588: added redirect rule for requests to outdated JS/graphics files
