--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,11 @@
+ucs-test (4.0.161-5) unstable; urgency=low
+
+  * removed constants from udm.py#UCSTestUDM() which could not be determined
+    correctly on some roles, and adapted the only two tests using them
+  (Bug #33435)
+
+ -- Lukas Walter <walter@univention.de>  Fri, 22 Nov 2013 15:29:39 +0100
+
 ucs-test (4.0.161-4) unstable; urgency=low
 
   * version bump (Bug #33048, Bug #33049)
