* Bug #33535: Use UCS 3.2 Apps while updating from UCS 3.1
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46278 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.50-3) unstable; urgency=low
+
+  * Bug #33535: Use UCS 3.2 Apps while updating from UCS 3.1
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 22 Nov 2013 21:39:58 +0100
+
 univention-management-console-module-appcenter (3.0.50-2) unstable; urgency=low
 
   * Bug #33484: Give possibility to query for component_id
