--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.50-4) unstable; urgency=low
+
+  * Bug #33535: Re-register apps (may have failed during update)
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 22 Nov 2013 21:47:45 +0100
+
 univention-management-console-module-appcenter (3.0.50-3) unstable; urgency=low
 
   * Bug #33535: Use UCS 3.2 Apps while updating from UCS 3.1
