* Bug #33341: The joinscript now fails when registering the apps did not succeed
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46281 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (3.0.50-5) unstable; urgency=low
+
+  * Bug #33341: The joinscript now fails when registering the apps did not
+    succeed
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 22 Nov 2013 22:08:07 +0100
+
 univention-management-console-module-appcenter (3.0.50-4) unstable; urgency=low
 
   * Bug #33535: Re-register apps (may have failed during update)
