--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (8.0.78-9) unstable; urgency=low
+
+  * Use user agent string for all requests (Bug #33552)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Sat, 23 Nov 2013 19:42:30 +0100
+
 univention-updater (8.0.78-8) unstable; urgency=low
 
   * Bug #33484: If a component is blocking a release update and this component
