* Use user agent string for all requests (Bug #33552)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46285 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.38-3) unstable; urgency=low
+
+  * Use user agent string for all requests (Bug #33552)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Sat, 23 Nov 2013 19:43:49 +0100
+
 univention-updater (9.0.38-2) unstable; urgency=low
 
   * Bug #33484: If a component is blocking a release update and this component
