* Improve the modrdn detection which avoids the duplication of LDAP   objects. In the second modrdn phase it is possible that new and old   are given for example if an old corrupted cache is used. The modrdn   status file is not deleted until the modrdn operation was successful   (Bug #33495)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46289 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-replication/debian/changelog
+++ b/management/univention-directory-replication/debian/changelog
@@ -1,3 +1,13 @@
+univention-directory-replication (7.0.1-2) unstable; urgency=low
+
+  * Improve the modrdn detection which avoids the duplication of LDAP
+    objects. In the second modrdn phase it is possible that new and old
+    are given for example if an old corrupted cache is used. The modrdn
+    status file is not deleted until the modrdn operation was successful
+    (Bug #33495)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 25 Nov 2013 08:43:00 +0100
+
 univention-directory-replication (7.0.1-1) unstable; urgency=low
 
   * replication.py: support for empty values in failed.ldif (Bug #25579)
