* Bug #33535: Fixed re-registration
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46300 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.50-6) unstable; urgency=low
+
+  * Bug #33535: Fixed re-registration
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 25 Nov 2013 11:36:59 +0100
+
 univention-management-console-module-appcenter (3.0.50-5) unstable; urgency=low
 
   * Bug #33341: The joinscript now fails when registering the apps did not
