--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,12 @@
+univention-management-console-frontend (3.0.152-4) unstable; urgency=low
+
+  * This update corrects the generation of ucs-overview links. The links
+    are now generated in the domain-joinscript. This ensures that 
+    host- and domain-identifiers match the current settings in case of
+    a domain-rejoin and after completing the appliance setup. (Bug #33447)
+
+ -- Erik Damrose <damrose@univention.de>  Mon, 25 Nov 2013 16:27:10 +0100
+
 univention-management-console-frontend (3.0.152-3) unstable; urgency=low
 
   * Bug #33130: fix max-width of dialog.confirm() (e.g. activation dialog in
