--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,12 @@
+univention-apache (6.0.16-4) unstable; urgency=low
+
+  * This update corrects the generation of ucs-overview links. The links
+  are now generated in the domain-joinscript. This ensures that
+  host- and domain-identifiers match the current settings in case of
+  a domain-rejoin and after completing the appliance setup. (Bug #33447) 
+
+ -- Erik Damrose <damrose@univention.de>  Mon, 25 Nov 2013 16:48:14 +0100
+
 univention-apache (6.0.16-3) unstable; urgency=low
 
   * Bug #33130: prevent to cache entries.json and languages.json in IE < 10
