* Bug #33535: And again
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46318 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.50-8) unstable; urgency=low
+
+  * Bug #33535: And again
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 26 Nov 2013 05:57:41 +0100
+
 univention-management-console-module-appcenter (3.0.50-7) unstable; urgency=low
 
   * Bug #33535: Fixed re-registration (again)
