* Operate on lowercase converted DNs while moving subtree objects.   This is necessary if the python UDM lib is used by the connector   for example when an ou is moved in AD (Bug #33482)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46320 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,11 @@
+univention-directory-manager-modules (9.0.75-4) unstable; urgency=low
+
+  * Operate on lowercase converted DNs while moving subtree objects.
+    This is necessary if the python UDM lib is used by the connector
+    for example when an ou is moved in AD (Bug #33482)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 26 Nov 2013 07:35:03 +0100
+
 univention-directory-manager-modules (9.0.75-3) unstable; urgency=low
 
   * workaround for delayed pysupport call during update (Bug #32409)
