--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (9.0.75-5) unstable; urgency=low
+
+  * Fixed more rename issues for containers and ous triggered by the
+    connector (Bug #33482)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 26 Nov 2013 09:11:22 +0100
+
 univention-directory-manager-modules (9.0.75-4) unstable; urgency=low
 
   * Operate on lowercase converted DNs while moving subtree objects.
