* Bug #30156: display error message when importing of malicious LDIF file failed
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46373 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.97-4) unstable; urgency=low
+
+  * Bug #30156: display error message when importing of malicious LDIF file
+  	failed
+
+ -- Florian Best <best@univention.de>  Wed, 27 Nov 2013 16:03:53 +0100
+
 univention-management-console-module-udm (4.0.97-3) unstable; urgency=low
 
   * Bug #33343: Fixed deleting a selected object from the LDAP tree.
