* 10_ldap/45replication_modrdn: added test case to check replication   after udm move operation (Bug #33495, Bug #32244)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46385 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.161-6) unstable; urgency=low
+
+  * 10_ldap/45replication_modrdn: added test case to check replication
+    after udm move operation (Bug #33495, Bug #32244)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 28 Nov 2013 08:39:13 +0100
+
 ucs-test (4.0.161-5) unstable; urgency=low
 
   * removed constants from udm.py#UCSTestUDM() which could not be determined
