* System-setup-boot: Disable firefox default browser check (Bug #33592)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46386 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.66-3) unstable; urgency=low
+
+  * System-setup-boot: Disable firefox default browser check (Bug #33592)
+
+ -- Erik Damrose <damrose@univention.de>  Thu, 28 Nov 2013 10:35:00 +0100
+
 univention-system-setup (7.0.66-2) unstable; urgency=low
 
   * System-setup-boot: urandom init-script is deactivated until system
