update to new Flash download URL (Bug #33357)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.1/ucs-3.1-1@46400 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/univention-flashplugin/debian/changelog
+++ b/desktop/univention-flashplugin/debian/changelog
@@ -1,3 +1,9 @@
+univention-flashplugin (7.0.6-1) unstable; urgency=low
+
+  * update to new Flash download URL (Bug #33357)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Thu, 28 Nov 2013 17:14:18 +0100
+
 univention-flashplugin (7.0.5-1) unstable; urgency=low
 
   * update to new Flash download URL (Bug #32558)
