--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.97-6) unstable; urgency=low
+
+  * Bug #30156: adjusted error handling and messages for license import
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 28 Nov 2013 18:02:32 +0100
+
 univention-management-console-module-udm (4.0.97-5) unstable; urgency=low
 
   * Bug #30156: add missing translation
@@ -6,8 +12,8 @@ univention-management-console-module-udm (4.0.97-5) unstable; urgency=low
 
 univention-management-console-module-udm (4.0.97-4) unstable; urgency=low
 
-  * Bug #30156: display error message when importing of malicious LDIF license file
-  	failed
+  * Bug #30156: display error message when importing of malicious LDIF license
+    file failed
 
  -- Florian Best <best@univention.de>  Wed, 27 Nov 2013 16:03:53 +0100
 
