* Bug #30156: adjusted error messages for license import
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46407 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.97-8) unstable; urgency=low
+
+  * Bug #30156: adjusted error messages for license import
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 28 Nov 2013 18:30:37 +0100
+
 univention-management-console-module-udm (4.0.97-7) unstable; urgency=low
 
   * Bug #30156: fixed typos
