--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.97-9) unstable; urgency=low
+
+  * Bug #30156: adjusted error representation in frontend
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 28 Nov 2013 18:54:56 +0100
+
 univention-management-console-module-udm (4.0.97-8) unstable; urgency=low
 
   * Bug #30156: adjusted error messages for license import
