--- a/management/univention-directory-replication/debian/changelog
+++ b/management/univention-directory-replication/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-replication (7.0.1-4) unstable; urgency=low
+
+  * Update debug messages for modrdn (Bug #33495)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 29 Nov 2013 13:43:41 +0100
+
 univention-directory-replication (7.0.1-3) unstable; urgency=low
 
   * More updates on the modrdn detection. If the local target already
