* Bug #33573: Inform about LDAP manipulation errors when registering apps; sync the apps when opening App Center
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46428 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (3.0.50-14) unstable; urgency=low
+
+  * Bug #33573: Inform about LDAP manipulation errors when registering apps;
+    sync the apps when opening App Center
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 29 Nov 2013 14:39:21 +0100
+
 univention-management-console-module-appcenter (3.0.50-13) unstable; urgency=low
 
   * Bug #33535: Fixed re-registration
