--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,12 @@
+univention-directory-manager-modules (8.0.143-28) unstable; urgency=low
+
+  * Allow the rename from upper to lowercase of an container or ou.
+    Because OpenLDAP does not support a rename of an object with
+    subobjects the container / ou has to be moved to a temporary
+    position first (Bug #33566)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Sat, 30 Nov 2013 15:33:59 +0100
+
 univention-directory-manager-modules (8.0.143-27) unstable; urgency=low
 
   * Fixed more rename issues for containers and ous triggered by the
