* tests/63_udm-containers: Added test cases for the rename of   containers and ou's (Bug #33482)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46439 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.161-8) unstable; urgency=low
+
+  * tests/63_udm-containers: Added test cases for the rename of
+    containers and ou's (Bug #33482)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Sat, 30 Nov 2013 15:48:50 +0100
+
 ucs-test (4.0.161-7) unstable; urgency=low
 
   * 10_ldap/46replication_modrdn_local_modification: added a test case
