* Removed debug from exception message (Bug #33566)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.1/ucs-3.1-1@46441 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (8.0.143-29) unstable; urgency=low
+
+  * Removed debug from exception message (Bug #33566)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Sat, 30 Nov 2013 15:52:35 +0100
+
 univention-directory-manager-modules (8.0.143-28) unstable; urgency=low
 
   * Allow the rename from upper to lowercase of an container or ou.
