--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba4 (3.0.39-3) unstable; urgency=low
+
+  * added logrotate config for samba to overwrite
+    default config (Bug #33529) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 02 Dec 2013 13:40:30 +0100
+
 univention-samba4 (3.0.39-2) unstable; urgency=low
 
   * deactivate wins in an ipv6(only) setup (Bug #33250)
