added logrotate config for winbind to overwrite     default config (Bug #33529)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46456 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba4 (3.0.39-4) unstable; urgency=low
+
+  * added logrotate config for winbind to overwrite
+    default config (Bug #33529) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 02 Dec 2013 14:04:43 +0100
+
 univention-samba4 (3.0.39-3) unstable; urgency=low
 
   * added logrotate config for samba to overwrite
