* Bug #33573: Identify unpacked packages as installed when reporting installed applications to LDAP
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46458 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (3.0.50-16) unstable; urgency=low
+
+  * Bug #33573: Identify unpacked packages as installed when reporting
+    installed applications to LDAP
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 02 Dec 2013 14:24:59 +0100
+
 univention-management-console-module-appcenter (3.0.50-15) unstable; urgency=low
 
   * Bug #33573: Inform about LDAP manipulation errors when registering apps;
