--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba4 (3.0.39-6) unstable; urgency=low
+
+  * added logrotate config for winbind to overwrite
+    default config (Bug #33529)
+
+ -- Felix Botner <botner@univention.de>  Mon, 02 Dec 2013 15:02:03 +0100
+
 univention-samba4 (3.0.39-5) unstable; urgency=low
 
   * added logrotate config for winbind to overwrite
