--- a/management/univention-directory-replication/debian/changelog
+++ b/management/univention-directory-replication/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-replication (6.0.6-5) unstable; urgency=low
+
+  * The entryUUID between master and slave could be different. The
+    modrdn code now considers this possibility (Bug #33555)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 03 Dec 2013 07:20:47 +0100
+
 univention-directory-replication (6.0.6-4) unstable; urgency=low
 
   * Update debug messages for modrdn (Bug #33555)
