--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.152-5) unstable; urgency=low
+
+  * Bug #32649: The progress bar does not have a transition anymore if the
+    value is "indeterminate".
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 03 Dec 2013 16:44:54 +0100
+
 univention-management-console-frontend (3.0.152-4) unstable; urgency=low
 
   * This update corrects the generation of ucs-overview links. The links
